--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 								<div class="univ">
 									<h3> Sorbonne Université (Ecole Doctorale EDITE) / EURECOM - Communication Systems Department</h3>
-									<p class="meta">2020 - 2023, Provence-Alpes-Côte d’Azur-France</p>
+									<p class="meta">2021 - 2024, Provence-Alpes-Côte d’Azur-France</p>
 									<p class="meta">Philosophiæ Doctor(PhD) Degree in Computer Science & Telecommunications, (speciality : Mobile Communication Systems)  | In progress ...</p>
 								</div>
 								<hr />
@@ -221,9 +221,12 @@
 								<div class="comp">
 									<h3>Publications </h3>
 									<!--i class="fas fa-gem fa-7x  " style="color: #7999cd"></i-->
+									<p class="meta"><a href="#" style="color: black">[5]&nbsp</a> <b>Mody Sy</b> and Raymond Knopp, "<em>Receiver Metric Design for Short-Block Channels : A Perspective for Reliable 6G Signalling Scenarios</em>", 2024 European Conference on Networks and Communications & 6G Summit (EuCNC & 6G Summit), Antwerp, Belgium, June 3–6, 2024. <br />
+										<cite><span class="bi-file-text-fill"><a href="./papers_detail/iccc2023/p(.html" style="color: violet">Detail</a></span></cite>&nbsp&nbsp
+										<cite><span class="bi-file-pdf-fill"><a href="#" style="color: violet">PDF</a></span></cite>&nbsp&nbsp
 									<p class="meta"><a href="#" style="color: black">[4]&nbsp</a> <b>Mody Sy</b> and Raymond Knopp, "<em>Novel Joint Estimation and Decoding Metrics for Short-Blocklength Transmission Systems</em>", 2023 IEEE Conference on Standards for Communications and Networking (CSCN), Munich, Germany, Nov 6–8, 2023. <br />
 										<cite><span class="bi-file-text-fill"><a href="./papers_detail/iccc2023/p4.html" style="color: violet">Detail</a></span></cite>&nbsp&nbsp
-										<cite><span class="bi-file-pdf-fill"><a href="https://drive.google.com/file/d/148pSJ939jChQe7afmG-DQPw41VCZCjcW/view?usp=drive_link" style="color: violet">PDF</a></span></cite>&nbsp&nbsp
+										<cite><span class="bi-file-pdf-fill"><a href="https://ieeexplore.ieee.org/document/10453187" style="color: violet">PDF</a></span></cite>&nbsp&nbsp
 										<!--cite><span class="bi-bookmarks-fill"><a href="./papers_detail/iccc2023/p3.tex" style="color: violet">BibTex</a></span></cite-->
 									</p>
 									<p class="meta"><a href="#" style="color: black">[3]&nbsp</a> <b>Mody Sy</b> and Raymond Knopp, "<em>Enhanced Low-Complexity Receiver Design for
