--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
-		<title>Dr. Mody Sy</title>
+		<title>Mody Sy, Ph.D.</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
 		<meta name="keywords" content="">
@@ -21,7 +21,9 @@
 		<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 		<!-- Favicons -->
 		<!--link rel="shortcut icon" href="img/favicon/favicon.png"-->
+
 		<link rel="shortcut icon" href="img/mo.jpg">
+
 
 	</head>
 
@@ -34,7 +36,7 @@
 				<header>
 					<div class="logo">
 					<div class="padd">
-						<h1>Dr. Mody Sy </h1>
+						<h1>Mody Sy, Ph.D. </h1>
 						<!--p>PhD Student at EURECOM | EDITE (Sorbonne Université) </p-->
 					</div>
 					</div>
@@ -70,7 +72,8 @@
 							<div class="span3">
 								<div class="padd">
 									<h2>About Me</h2>
-									<img src="img/mo.png" alt="" class="profile"/>
+									<img src="img/mo1.png" alt="" class="profile"/><!--this is my photo-->
+
 								</div>
 							</div>
 							<div class="span9">
@@ -79,9 +82,9 @@
 									<h3  style="font-weight:bold" >Biography</h3>
 									<!--p style="font-weight:bold">PhD Student in Mobile communication systems at EURECOM | EDITE (Sorbonne Université) </p-->
 									<hr />
-									<p class="meta">Mody SY received his Ph.D. degree in Telecommunication Engineering in 2024 from Sorbonne University, Paris, France. He also holds an M.Eng. degree, known as Dipl. Ing., in Computer Engineering (specialty: Telecommunications and Networks) from Ecole Supérieure Polytechnique (ESP) of Dakar, Senegal, which he obtained in 2020.</P>
+									<p class="meta">Mody SY received his Ph.D. degree in Telecommunication Engineering in 2024 from Sorbonne University, Paris, France. He also holds a M.Eng. degree or Dipl. Ing., in Computer Engineering (Telecommunications and Networks) from Ecole Supérieure Polytechnique (ESP) of Dakar, Senegal, which he obtained in 2020.</P>
 									<p class="meta">Mody is currently a postdoctoral researcher in the Communication Systems Department at EURECOM.</p>
-									<p class="meta">His research interests lie in the area of wireless communications, with a special focus on <em>physical layer fundamentals and designs </em>for post-5G mobile communication systems .</p>
+									<p class="meta">His research interests lie in the area of wireless communications, with a special focus on <em>physical layer fundamentals and designs </em>for post-5G communication systems .</p>
 
 								</div>
 								</div>
@@ -138,11 +141,15 @@
 								<div class="padd">
 								<div class="set">
 									<span class="label-info">B5G Mobile Communication systems</span> </br>
-									<span class="label-info">3GPP systems : Radio Acess Network (RAN) </span> </br>
-									<span class="label-info">Advanced wireless Communication </span>  </br>
+									<span class="label-info">Advanced wireless Communication</span>  </br>
+									<span class="label-info">Radio Acess Network (RAN) </span> </br>
+									<span class="label-info">Physical Layer Fundamentals and Designs</span>  </br>
 									<span class="label-info">Channel coding </span> </br>
-									<span class="label-info">Receiver  Designs</span></br>
+									<span class="label-info">Receiver Designs</span></br>
 									<span class="label-info">Communications Theory </span></br>
+									<span class="label-info">Mathematical Methods and Algorithms </span></br>
+									<span class="label-info">Integrated Sensing and Communications</span></br>
+									<span class="label-info">3GPP/ETSI  Standarizations Aspects</span></br>
 									<span class="label-info"></span></br>
 									<span class="label-info">Programming (C, MATLAB) - Software Dev., SQL, UML, LATEX </span></br>
 								</div>
@@ -231,35 +238,39 @@
 								<div class="comp">
 									<h3>Publications </h3>
 									<!--i class="fas fa-gem fa-7x  " style="color: #7999cd"></i-->
-									<p class="meta"><a href="#" style="color: black">[6]&nbsp</a> <b>Mody Sy</b> and Raymond Knopp, "<em>Enhanced BICM Receiver Metrics for Ultra-Reliable Low-Latency Short Block Channel Communications</em>", In the process of being submitted to IEEE Transactions on Wireless Communications, preprint can be found on  <cite><a href="https://doi.org/10.48550/arXiv.2408.08660" style="color: violet">ArXiv</a>,</cite> August 16, 2024. <br />
-										<cite><span class="bi-file-text-fill"><a href="./https://doi.org/10.48550/arXiv.2404.09943" style="color: violet">Detail</a></span></cite>&nbsp&nbsp
-										<cite><span class="bi-file-pdf-fill"><a href="https://doi.org/10.48550/arXiv.2408.08660" style="color: violet">PDF</a></span></cite>&nbsp&nbsp
+									<p class="meta"><a href="#" style="color: black">[7]&nbsp</a> <b>Mody Sy</b>, "<em>Demystifying 5G Polar and LDPC Codes: A Comprehensive Review and Foundations</em>", submitted to IEEE Communications Surveys and Tutorials, preprint can be found on  <cite><a href="#" style="color: darkgray">ArXiv</a>,</cite> February 15, 2025. <br />
+										<cite><span class="bi-file-text-fill"><a href="https://doi.org/10.48550/arXiv.2502.11053" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
+										<cite><span class="bi-file-pdf-fill"><a href="https://doi.org/10.48550/arXiv.2502.11053" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
+
+									<p class="meta"><a href="#" style="color: black">[6]&nbsp</a> <b>Mody Sy</b> and Raymond Knopp, "<em>Enhanced BICM Receiver Metrics for Ultra-Reliable Low-Latency Short Block Channel Communications</em>", In the process of being submitted to IEEE Transactions on Wireless Communications, preprint can be found on  <cite><a href="https://doi.org/10.48550/arXiv.2408.08660" style="color: darkgray">ArXiv</a>,</cite> August 16, 2024. <br />
+										<cite><span class="bi-file-text-fill"><a href="https://doi.org/10.48550/arXiv.2408.08660" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
+										<cite><span class="bi-file-pdf-fill"><a href="https://doi.org/10.48550/arXiv.2408.08660" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
 									<p class="meta"><a href="#" style="color: black">[5]&nbsp</a> <b>Mody Sy</b> and Raymond Knopp, "<em>Receiver Metric Design for Short-Block Channels : A Perspective for Reliable 6G Signalling Scenarios</em>", 2024 European Conference on Networks and Communications & 6G Summit (EuCNC & 6G Summit), Antwerp, Belgium, June 3–6, 2024. <br />
-										<cite><span class="bi-file-text-fill"><a href="./papers_detail/iccc2023/p5.html" style="color: violet">Detail</a></span></cite>&nbsp&nbsp
-										<cite><span class="bi-file-pdf-fill"><a href="https://ieeexplore.ieee.org/document/10597121" style="color: violet">PDF</a></span></cite>&nbsp&nbsp
+										<cite><span class="bi-file-text-fill"><a href="./papers_detail/iccc2023/p5.html" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
+										<cite><span class="bi-file-pdf-fill"><a href="https://ieeexplore.ieee.org/document/10597121" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
 									<p class="meta"><a href="#" style="color: black">[4]&nbsp</a> <b>Mody Sy</b> and Raymond Knopp, "<em>Novel Joint Estimation and Decoding Metrics for Short-Blocklength Transmission Systems</em>", 2023 IEEE Conference on Standards for Communications and Networking (CSCN), Munich, Germany, Nov 6–8, 2023. <br />
-										<cite><span class="bi-file-text-fill"><a href="./papers_detail/iccc2023/p4.html" style="color: violet">Detail</a></span></cite>&nbsp&nbsp
-										<cite><span class="bi-file-pdf-fill"><a href="https://doi.org/10.48550/arXiv.2404.09943" style="color: violet">PDF</a></span></cite>&nbsp&nbsp
-										<!--cite><span class="bi-bookmarks-fill"><a href="./papers_detail/iccc2023/p3.tex" style="color: violet">BibTex</a></span></cite-->
+										<cite><span class="bi-file-text-fill"><a href="./papers_detail/iccc2023/p4.html" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
+										<cite><span class="bi-file-pdf-fill"><a href="https://doi.org/10.48550/arXiv.2404.09943" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
+										<!--cite><span class="bi-bookmarks-fill"><a href="./papers_detail/iccc2023/p3.tex" style="color: darkgray">BibTex</a></span></cite-->
 									</p>
 									<p class="meta"><a href="#" style="color: black">[3]&nbsp</a> <b>Mody Sy</b> and Raymond Knopp, "<em>Enhanced Low-Complexity Receiver Design for
 									Short Block Transmission Systems</em>", In the Proceedings of the 34th IEEE International Symposium on Personal, Indoor and Mobile Radio Communications(PIMRC 2023 ), Toronto, ON, Canada, Sept 5–8, 2023. <br />
-										<cite><span class="bi-file-text-fill"><a href="./papers_detail/iccc2023/p3.html" style="color: violet">Detail</a></span></cite>&nbsp&nbsp
-										<cite><span class="bi-file-pdf-fill"><a href="https://doi.org/10.48550/arXiv.2404.10065" style="color: violet">PDF</a></span></cite>&nbsp&nbsp
-										<!--cite><span class="bi-bookmarks-fill"><a href="./papers_detail/iccc2023/p3.tex" style="color: violet">BibTex</a></span></cite-->
+										<cite><span class="bi-file-text-fill"><a href="./papers_detail/iccc2023/p3.html" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
+										<cite><span class="bi-file-pdf-fill"><a href="https://doi.org/10.48550/arXiv.2404.10065" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
+										<!--cite><span class="bi-bookmarks-fill"><a href="./papers_detail/iccc2023/p3.tex" style="color: darkgray">BibTex</a></span></cite-->
 									</p>
 									<p class="meta"><a href="#" style="color: black">[2]&nbsp</a> <b>Mody Sy</b> and Raymond Knopp, "<em>Low-complexity Block-Based Decoding Algorithms for Short
 										Block Channels </em>", IEEE AFRICON 2023,  Nairobi, Kenya, Sept 20–22, 2023. <br />
-										<cite><span class="bi-file-text-fill"><a href="./papers_detail/iccc2023/p2.html" style="color: violet">Detail</a></span></cite>&nbsp&nbsp
-										<cite><span class="bi-file-pdf-fill"><a href="https://doi.org/10.48550/arXiv.2404.10798" style="color: violet">PDF</a></span></cite>&nbsp&nbsp
-										<!--cite><span class="bi-bookmarks-fill"><a href="./papers_detail/iccc2023/p2.tex" style="color: violet">BibTex</a></span></cite-->
+										<cite><span class="bi-file-text-fill"><a href="./papers_detail/iccc2023/p2.html" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
+										<cite><span class="bi-file-pdf-fill"><a href="https://doi.org/10.48550/arXiv.2404.10798" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
+										<!--cite><span class="bi-bookmarks-fill"><a href="./papers_detail/iccc2023/p2.tex" style="color: darkgray">BibTex</a></span></cite-->
 									</p>
 
 									<p class="meta"><a href="https://drive.google.com/file/d/1vWiB8lRy_nm8k65szvOnwlnwsVco7XZd/view?usp=sharing" style="color: black">[1]&nbsp</a> <b>Mody Sy</b>, "<em>Optimization Strategies
 										for Low Latency 5G NR LDPC Decoding on General Purpose Processor</em>", 5-th IEEE International Conference on Control, Communication and Computing (ICCC 2023),Thiruvananthapuram, India, May 19-20, 2023, pp. 1-6, doi: 10.1109/ICCC57789.2023.10165378..<br />
-										<cite><span class="bi-file-text-fill"><a href="./papers_detail/iccc2023/p1.html" style="color: violet">Detail</a></span></cite>&nbsp&nbsp
-										<cite><span class="bi-file-pdf-fill"><a href="https://ieeexplore.ieee.org/document/10165378" style="color: violet">PDF</a></span></cite>&nbsp&nbsp
-										<!--cite><span class="bi-bookmarks-fill"><a href="./papers_detail/iccc2023/p1.tex" style="color: violet">BibTex</a></span></cite-->
+										<cite><span class="bi-file-text-fill"><a href="./papers_detail/iccc2023/p1.html" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
+										<cite><span class="bi-file-pdf-fill"><a href="https://ieeexplore.ieee.org/document/10165378" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
+										<!--cite><span class="bi-bookmarks-fill"><a href="./papers_detail/iccc2023/p1.tex" style="color: darkgray">BibTex</a></span></cite-->
 									</p> <!--https://drive.google.com/file/d/1vWiB8lRy_nm8k65szvOnwlnwsVco7XZd/view?usp=share_link->
 
 
@@ -294,11 +305,11 @@
 										<div class="clearfix"></div> <hr />
 										<label><i class="bi-envelope-fill" style="color: black"></i></label> <a href="mailto:mody.sy@eurecom.fr"><span>mody.sy@eurecom.fr</span></a>
 										<div class="clearfix"></div> <hr />
-										<label><i class="bi-telephone-fill" style="color: black"></i></label> <span>+330780810666</span>
+										<label><i class="bi-telephone-fill" style="color: black"></i></label> <span>+33049008155</span>
 										<div class="clearfix"></div> <hr />
-										<label><i class="bi-house-fill" style="color: black"></i></label> <span> 86 c Rue Auguste Pegurier, <br />06200 Nice, France</span>
+										<label><i class="bi-house-fill" style="color: black"></i></label> <span> Campus SophiaTech, <br />06410 Biot, France</span>
 										<div class="clearfix"></div> <hr />
-										<label><i class="bi-person-lines-fill" style="color: violet"></i></label> <span><a href="https://drive.google.com/file/d/1x6Hz9iwnlltvoK3OzSutssz5hPpGQDJC/view?usp=share_link" style="color: violet">Resume (click to <i class="bi-arrow-down-square-fill"></i>)</a></span>
+										<label><i class="bi-person-lines-fill" style="color: darkgray"></i></label> <span><a href="https://drive.google.com/file/d/1x6Hz9iwnlltvoK3OzSutssz5hPpGQDJC/view?usp=share_link" style="color: darkgray">CV (click to <i class="bi-arrow-down-square-fill"></i>)</a></span>
 										<div class="clearfix"></div>
 									</div>
 								</div>
@@ -337,7 +348,7 @@
 									</div>
 								  </div>
 								  <div class="form-actions" >
-									<button type="submit" name="send "class="btn" >save change</button>
+									<button type="submit" name="send "class="btn" >Submit</button>
 									<!-- button class="btn">Cancel</button> -->
 								  </div>
 								</fieldset>
@@ -358,7 +369,7 @@
 					<div class="container">
 
 						<div class="row">
-						<div class="span6"><div class="fpadd">Copyright &copy; mody2021 <a href="https://eurecom.fr/~sy"></a></div></div>
+						<div class="span6"><div class="fpadd">Copyright &copy; drmodiisii2025<a href="https://eurecom.fr/~sy"></a></div></div>
 
 						</div>
 						<div class="clearfix"></div>
