--- a/index.html
+++ b/index.html
@@ -238,11 +238,16 @@
 								<div class="comp">
 									<h3>Publications </h3>
 									<!--i class="fas fa-gem fa-7x  " style="color: #7999cd"></i-->
-									<p class="meta"><a href="#" style="color: black">[7]&nbsp</a> <b>Mody Sy</b>, "<em>Demystifying 5G Polar and LDPC Codes: A Comprehensive Review and Foundations</em>", submitted to IEEE Communications Surveys and Tutorials, preprint can be found on  <cite><a href="#" style="color: darkgray">ArXiv</a>,</cite> February 15, 2025. <br />
+									<p class="meta"><a href="#" style="color: black">[7]&nbsp</a> <b>Mody Sy</b>, "<em>LLR-based attention-weighted projection decoding for sparse vector coded short-packet transmissions</em>", submitted to IEEE Transactions on Wireless Communications, preprint can be found on  <cite><a href="" style="color: darkgray">ArXiv</a>,</cite> September 26, 2025. <br />
+										<cite><span class="bi-file-text-fill"><a href="#" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
+										<cite><span class="bi-file-pdf-fill"><a href="#" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
+
+									<p class="meta"><a href="#" style="color: black">[7]&nbsp</a> <b>Mody Sy</b>, "<em>Demystifying 5G Polar and LDPC Codes: A Comprehensive Review and Foundations</em>", preprint can be found on  <cite><a href="https://doi.org/10.48550/arXiv.2502.11053" style="color: darkgray">ArXiv</a>,</cite> February 15, 2025. <br />
 										<cite><span class="bi-file-text-fill"><a href="https://doi.org/10.48550/arXiv.2502.11053" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
 										<cite><span class="bi-file-pdf-fill"><a href="https://doi.org/10.48550/arXiv.2502.11053" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
 
-									<p class="meta"><a href="#" style="color: black">[6]&nbsp</a> <b>Mody Sy</b> and Raymond Knopp, "<em>Enhanced BICM Receiver Metrics for Ultra-Reliable Low-Latency Short Block Channel Communications</em>", In the process of being submitted to IEEE Transactions on Wireless Communications, preprint can be found on  <cite><a href="https://doi.org/10.48550/arXiv.2408.08660" style="color: darkgray">ArXiv</a>,</cite> August 16, 2024. <br />
+									<p class="meta"><a href="#" style="color: black">[6]&nbsp</a> <b>Mody Sy</b> and Raymond Knopp, "<em>Enhanced BICM Receivers for Ultra-Reliable
+										Low-Latency Short Packet Communications</em>", submitted to IEEE Transactions on Wireless Communications, preprint can be found on  <cite><a href="https://doi.org/10.48550/arXiv.2408.08660" style="color: darkgray">ArXiv</a>,</cite> October 07, 2025. <br />
 										<cite><span class="bi-file-text-fill"><a href="https://doi.org/10.48550/arXiv.2408.08660" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
 										<cite><span class="bi-file-pdf-fill"><a href="https://doi.org/10.48550/arXiv.2408.08660" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
 									<p class="meta"><a href="#" style="color: black">[5]&nbsp</a> <b>Mody Sy</b> and Raymond Knopp, "<em>Receiver Metric Design for Short-Block Channels : A Perspective for Reliable 6G Signalling Scenarios</em>", 2024 European Conference on Networks and Communications & 6G Summit (EuCNC & 6G Summit), Antwerp, Belgium, June 3–6, 2024. <br />
