--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<!-- Favicons -->
 		<!--link rel="shortcut icon" href="img/favicon/favicon.png"-->
 
-		<link rel="shortcut icon" href="img/mo.jpg">
+		<link rel="shortcut icon" href="img/mo2.png">
 
 
 	</head>
@@ -82,9 +82,22 @@
 									<h3  style="font-weight:bold" >Biography</h3>
 									<!--p style="font-weight:bold">PhD Student in Mobile communication systems at EURECOM | EDITE (Sorbonne Université) </p-->
 									<hr />
-									<p class="meta">Mody SY received his Ph.D. degree in Telecommunication Engineering in 2024 from Sorbonne University, Paris, France. He also holds a M.Eng. degree or Dipl. Ing., in Computer Engineering (Telecommunications and Networks) from Ecole Supérieure Polytechnique (ESP) of Dakar, Senegal, which he obtained in 2020.</P>
-									<p class="meta">Mody is currently a postdoctoral researcher in the Communication Systems Department at EURECOM.</p>
-									<p class="meta">His research interests lie in the area of wireless communications, with a special focus on <em>physical layer fundamentals and designs </em>for post-5G communication systems .</p>
+
+
+									<p class="meta"> Mody Sy received his Ph.D. degree in Engineering Sciences(Computer Science, Telecommunications, and Electronics) in 2024 from Sorbonne University, Paris, France. He is currently a postdoctoral research fellow at EURECOM, and his research interests lie in the area of wireless communications, more specifically, on the physical layer fundamentals and design for post-5G communication systems. </p>
+									<p class="meta"> Over the past 5 years, Mody has worked on receiver design aspects for ultra-reliable, low latency, short packet communications. Currently, he is involved in Integrated Sensing and Communication (ISAC), advanced physical-layer design, covering both theoretical and implementation aspects, digital signal processing, receiver algorithm design, hands-on experience in 3GPP standardization-oriented innovations, prototyping, and proof-of-concept validation.</p>
+
+								<!--p class="meta">	Mody Sy is a researcher who finds himself where theory meets application—on the evolving frontiers of wireless communication. He received his Ph.D. in Engineering Sciences (Computer Science, Telecommunications, and Electronics) from Sorbonne University, Paris, in 2024. He is currently a postdoctoral fellow at EURECOM, where he investigates the foundations of physical-layer design for post-5G and 6G systems.</p>
+
+								<p class="meta">For the past five years, his work has focused on one of the wireless world’s thorniest problems: designing robust receivers that can reliably decode ultra-short packets under tight latency and reliability constraints. This line of research, often tucked away in the technical sections of 5G whitepapers, is crucial for applications where delays are intolerable and errors unaffordable.</p>
+
+								<p class="meta">More recently, his attention has turned to Integrated Sensing and Communication (ISAC)—a field that promises to make wireless systems not just communicative, but perceptive. As part of the 3GPP standardization track on ISAC, he contributes to shaping how future networks will merge data transmission with environmental awareness.</p>
+
+								<p class="meta">Whether optimizing receivers for unpredictable channels or exploring how machines can see while they speak, his work bridges the conceptual with the concrete—aimed at pushing wireless systems closer to the limits of what is theoretically possible and practically needed.</p-->
+
+									<!--p class="meta">Mody SY received his Ph.D. degree in Telecommunication Engineering in 2024 from Sorbonne University, Paris, France. He also holds a M.Eng. degree or Dipl. Ing., in Computer Engineering (Telecommunications and Networks) from Ecole Supérieure Polytechnique (ESP) of Dakar, Senegal, which he obtained in 2020.</P-->
+									<!--p class="meta">Mody is currently a postdoctoral researcher in the Communication Systems Department at EURECOM.</p-->
+									<!--p class="meta">His research interests lie in the area of wireless communications, with a special focus on <em>physical layer fundamentals and designs </em>for post-5G communication systems .</p-->
 
 								</div>
 								</div>
@@ -108,19 +121,22 @@
 								<div class="univ">
 									<h3> Sorbonne Université / EURECOM - Communication Systems Department</h3>
 									<p class="meta">2021 - 2024, Provence-Alpes-Côte d’Azur-France</p>
-									<p class="meta">Philosophiæ Doctor(PhD) Degree in Computer Science, Telecommunications & Electronics, (speciality : Telecommunication  Engineering)</p>
+									<p class="meta" style="color: gray;"><strong>Philosophiæ Doctor(PhD) Degree</strong> in Engineering Sciences (Computer Science, Telecommunications & Electronics)</p>
+										<p class="meta">Ph.D. Thesis: <em>Ph.D. Thesis Subject: Enhanced Receiver Design for Ultra-Reliable Low-Latency Short Data Communications</em>. </p>
 								</div>
 								<hr />
 								<div class="univ">
 									<h3> Ecole  Supérieure Polytechnique (ESP/UCAD) - Computer Engineering Department</h3>
 									<p class="meta">2017 - 2020, Dakar</p>
-									<p class="meta">Engineer's Degree (Dipl. Ing.  or  M. Eng.) in Computer Engineering, majoring in  Telecommunications and Networks.</p>
+									<p class="meta" style="color: gray;"><strong>Master of Engineering Degree (Dipl. Ing.  or  M. Eng.)</strong>  in  Telecommunications and Networks.</p>
+										<p class="meta">Master’s Thesis: <em>Optimization of channel decoding algorithms</em>. </p>
 								</div>
 								<hr />
 								<div class="univ">
 									<h3>Ecole  Supérieure Polytechnique (ESP/UCAD) - Computer Engineering Department</h3>
 									<p class="meta">2015 - 2017, Dakar</p>
-									<p class="meta">University Degree of Technology (DUT) in Computer Engineering  majoring in Telecommunications & Networks. </p>
+									<p class="meta" style="color: gray;"><strong>Preparatory Cycle / Associate Degree</strong> in   Telecommunications & Networks in Telecommunications & Networks. </p>
+										<p class="meta">Associate’s Degree Thesis: <em>Monitoring VMs in a Proxmox VE cluster with Centreon Enterprise Server</em>. </p>
 								</div>
 								</div>
 							</div>
@@ -134,24 +150,28 @@
 						<div class="row">
 							<div class="span3">
 								<div class="padd">
-									<h2>Skills</h2>
+									<h2>Technical Skills</h2>
 								</div>
 							</div>
 							<div class="span6">
 								<div class="padd">
 								<div class="set">
-									<span class="label-info">B5G Mobile Communication systems</span> </br>
-									<span class="label-info">Advanced wireless Communication</span>  </br>
-									<span class="label-info">Radio Acess Network (RAN) </span> </br>
-									<span class="label-info">Physical Layer Fundamentals and Designs</span>  </br>
-									<span class="label-info">Channel coding </span> </br>
-									<span class="label-info">Receiver Designs</span></br>
-									<span class="label-info">Communications Theory </span></br>
-									<span class="label-info">Mathematical Methods and Algorithms </span></br>
-									<span class="label-info">Integrated Sensing and Communications</span></br>
-									<span class="label-info">3GPP/ETSI  Standarizations Aspects</span></br>
-									<span class="label-info"></span></br>
-									<span class="label-info">Programming (C, MATLAB) - Software Dev., SQL, UML, LATEX </span></br>
+									<span class="label-info">B5G Mobile Communication systems</span>
+									<span class="label-info">Advanced wireless Communication</span>
+									<span class="label-info">Radio Acess Network (RAN) </span>
+									<span class="label-info">Physical Layer Fundamentals and Designs</span>
+									<span class="label-info">Channel coding </span>
+										<span class="label-info">Coded Modulation </span>
+
+									<span class="label-info">Receiver Designs</span>
+									<span class="label-info">Communications Theory </span>
+									<span class="label-info">Signal Processing </span>
+									<span class="label-info">Mathematical Methods and Algorithms </span>
+									<span class="label-info">Integrated Sensing and Communications</span>
+									<span class="label-info">3GPP/ETSI  Standarizations Rel 15+ </span>
+									<span class="label-info">Ambient IoT, Low Power Device Communications</span>
+									<span class="label-info">Programming (C, C++, MATLAB) - Software Dev., SQL, UML, LATEX </span>
+
 								</div>
 								</div>
 							</div>
@@ -172,9 +192,19 @@
 								<div class="padd">
 								<div class="comp">
 									<h3>EURECOM, Provence-Alpes-Côte d’Azur, France.</h3>
-									<p class="meta">feb. 2021 – oct. 2024.</p>
-									<p class="meta"> PostDoctoral Researcher.</p>
-									<!--p class="meta">Ph.D. Thesis Subject: Enhanced Receiver Design for Ultra-Reliable Low-Latency Short Data Communications.</p-->
+									<p class="meta">Jan. 2025 – June. 2026.</p>
+									<p class="meta" style="color: gray;"><strong> PostDoctoral Research Fellow.</strong> </p>
+									<p class="meta" style="color: gray;">Achievements  & Key Responsibilities </p>
+									<ul class="meta2">
+										<li><p class="meta"> Leading research on 6G Integrated Sensing and Communications (ISAC) standardization activities within 3GPP and ETSI (Release 19+).</p></li>
+										<li><p class="meta"> Developing PHY-layer prototypes and simulation frameworks for ISAC, covering waveform design  for enhanced joint sensing and communication performance.</p></li>
+										<li><p class="meta"> Contributing to low-power ISAC system design for ambient IoT devices in backscatter-aware scenarios.</p></li>
+										<li><p class="meta"> Acting as a team member in EURECOM’s research efforts on standardization-oriented innovations for 3GPP ISAC (Release 19+).</p></li>
+										<li><p class="meta"> Participating in weekly standardization group meetings at EURECOM as an active team member.</p></li>
+										<li><p class="meta"> Contributing simultaneously to the broader goal of reliable and efficient short-block-length transmission for 5G/6G signaling.</p></li>
+								</ul>
+
+
 									<!--p class="meta">keywords : Coding, Multiple-Access, Cyber-Physical Systems (CPS), Time-Sensitive Networking (TSN), Real-time communication, 3GPP releases.</p-->
 								</div>
 								<hr />
@@ -183,21 +213,34 @@
 								<div class="comp">
 									<h3>EURECOM, Provence-Alpes-Côte d’Azur, France.</h3>
 									<p class="meta">feb. 2021 – oct. 2024.</p>
-									<p class="meta"> Research assistant | PhD Candidate.</p>
-									<p class="meta">Ph.D. Thesis Subject: Enhanced Receiver Design for Ultra-Reliable Low-Latency Short Data Communications..</p>
-									<!--p class="meta">keywords : Coding, Multiple-Access, Cyber-Physical Systems (CPS), Time-Sensitive Networking (TSN), Real-time communication, 3GPP releases.</p-->
+									<p class="meta" style="color: gray;"><strong>Research assistant | PhD Candidate.</strong> </p>
+									<p class="meta" style="color: gray;">Achievements  & Key Responsibilities </p>
+								<ul class="meta2">
+									<li><p class="meta"> Designed and implemented novel short-packet detection and decoding algorithms for ultra-reliable low-latency 5G uplink/downlink channels (PxSCH, PxCCH, 2-Step RACH, etc.).</p></li>
+									<li><p class="meta"> Proposed enhanced bit-interleaved coded-modulation (BICM) receiver metrics for both MIMO and non-MIMO transmissions, improving reliability in 5G/6G signaling.</p></li>
+								 <!--li><p class="meta"> Developed a new two-step random access transmission method, referred to as 2-Step RACH++, which extends the traditional approach by enabling joint transmission of Message A (RACH preamble + payload over PUSCH) while ensuring spectral efficiency and low latency (low duty cycle).</p></li-->
+								 <li><p class="meta"> Contributed as a research engineer to EURECOM’s and 3GPP’s standardization-oriented research efforts from Release 16 to Release 19.</p></li>
+							</ul>
 								</div>
 								<hr />
 
 								<div class="comp">
 									<h3>EURECOM, Provence-Alpes-Côte d’Azur, France.</h3>
 									<p class="meta">feb. 2020 – jul. 2020, 6 Months.</p>
-									<p class="meta"> Research internship.</p>
+									<p class="meta" style="color: gray;"><strong> Research internship.</strong> </p>
 									<p class="meta">M. Eng. Thesis Subject: Optimization of channel decoding algorithms.</p>
 									<!--p class="meta">keywords : openAirinterface(OAI), 5G NR LDPC decoding , 3GPP, SIMD, x86 targets.</p-->
-
+									<ul class="meta2">
+										<!--li><p class="meta">Completed a 6-month research internship as part of the Master of Engineering (Diplôme d’Ingénieur) program.</p></li-->
+										<li><p class="meta">Investigated optimization strategies for low-latency 5G NR-LDPC decoding on general-purpose processors (GPPs).</p></li>
+										<!--li><p class="meta">Designed and implemented SIMD-based parallel decoding techniques targeting x86 architectures to improve throughput and latency performance.</p></li!-->
+										<li><p class="meta">Utilized the OpenAirInterface (OAI) 5G platform to validate decoding algorithms under realistic PHY-layer conditions.</p></li>
+										<li><p class="meta">Achieved a significant reduction in decoding latency compared to baseline implementations, demonstrating the potential for real-time 5G PHY deployments.</p></li>
+								</ul>
 								</div>
 								<hr />
+
+
 								<!--div class="comp">
 									<h3>APT, Dakar, Senegal.</h3>
 									<p class="meta">jun. 2017 – Aug. 2017, 3 Months.</p>
@@ -217,7 +260,7 @@
 						<div class="row">
 							<div class="span3">
 								<div class="padd">
-									<h2>Publications & Projects</h2>
+									<h2>Publications & Academic Commitments</h2>
 								</div>
 							</div>
 							<div class="span9">
@@ -238,7 +281,8 @@
 								<div class="comp">
 									<h3>Publications </h3>
 									<!--i class="fas fa-gem fa-7x  " style="color: #7999cd"></i-->
-									<p class="meta"><a href="#" style="color: black">[8]&nbsp</a> <b>Mody Sy</b>, "<em>LLR-based attention-weighted projection decoding for sparse vector coded short-packet transmissions</em>", submitted to IEEE Transactions on Wireless Communications, preprint can be found on  <cite><a href="" style="color: darkgray">ArXiv</a>,</cite> September 26, 2025. <br />
+									 <p class="meta"> I actively contribute to advancing research in 5G/6G wireless communications, channel coding, and physical layer design.	</p>
+									<p class="meta"><a href="#" style="color: black">[8]&nbsp</a> <b>Mody Sy</b>, "<em>LLR-based attention-weighted projection decoding for sparse vector coded short-packet transmissions</em>", submitted to IEEE Transactions on Communications, preprint can be found on  <cite><a href="" style="color: darkgray">ArXiv</a>,</cite> October 19, 2025. <br />
 										<cite><span class="bi-file-text-fill"><a href="#" style="color: darkgray">Detail</a></span></cite>&nbsp&nbsp
 										<cite><span class="bi-file-pdf-fill"><a href="#" style="color: darkgray">PDF</a></span></cite>&nbsp&nbsp
 
@@ -286,9 +330,20 @@
 									<!--p class="meta"><a href="https://drive.google.com/file/d/1hIaHWBRKJ39gL8LYXD4qaqQMkPTVSlFk/view?usp=sharing">[3] </a> BLER performance benchmarking of 5G NR LDPC decoding algorithms  .</p-->
 									<!--p class="meta"><a href="#">[4]</a> Coding and Multiple-Access Strategies for Ultra-Reliable Low-Latency communications with Applications in Cyber-physical Systems (In progress ... ).</p-->
 
+									<h3>Academic Commitments</h3>
+									<p class="meta"> I have been invited to serve as a peer reviewer for several prestigious/flagship international journals and conferences in  wireless communications .		</p>
+									<p class="meta"><a href="" style="color: black">[1]&nbsp</a> <b>IEEE TWC</b>, "<em>IEEE Transactions on Wireless Communications</em>", (Scientific Journal), published by IEEE ComSoc, Jan 14, 2025 and May 12, 2025.  <br />
+									<p class="meta"><a href="" style="color: black">[2]&nbsp</a> <b>IEEE TCOM</b>, "<em>IEEE Transactions on Communications</em>", (Scientific Journal), published by IEEE ComSoc, Nov 4, 2025.  <br />
+									<p class="meta"><a href="" style="color: black">[3]&nbsp</a> <b>Electronics Letters</b>, "<em>Wiley Electronics Letters</em>", (Scientific Journal), published by Wiley, Apr 20, 2025.  <br />
+									<p class="meta"><a href="" style="color: black">[3]&nbsp</a> <b>Elsevier COMNET</b>, "<em>Elsevier Computer Networks</em>", (Scientific Journal), published by Elsevier, 2024, 2025.  <br />
 
+										<p class="meta"><a href="" style="color: black">[3]&nbsp</a> <b>IEEE ICC</b>, "<em>Technical Program Committee (TPC) member for  IEEE International Conference on Communications (IEEE ICC) 2026 – Wireless Communications Symposium</em>", (Scientific Conference), published by Elsevier, 2026, Glasgow, Scotland, UK.  <br />
+
+										<!--cite><span class="bi-bookmarks-fill"><a href="./papers_detail/iccc2023/p3.tex" style="color: darkgray">BibTex</a></span></cite-->
+									</p>
 
 								</div>
+
 
 
 								<!--/div-->
