--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 									<h3>EURECOM, Provence-Alpes-Côte d’Azur, France.</h3>
 									<p class="meta">feb. 2020 – jul. 2020, 6 Months.</p>
 									<p class="meta" style="color: gray;"><strong> Research internship.</strong> </p>
-									<p class="meta">M. Eng. Thesis Subject: Optimization of channel decoding algorithms.</p>
+									<p class="meta" style="color: gray;">Achievements  & Key Responsibilities </p>
 									<!--p class="meta">keywords : openAirinterface(OAI), 5G NR LDPC decoding , 3GPP, SIMD, x86 targets.</p-->
 									<ul class="meta2">
 										<!--li><p class="meta">Completed a 6-month research internship as part of the Master of Engineering (Diplôme d’Ingénieur) program.</p></li-->
